# rust-text

./: Cargo.toml  README.md
src/: gl_util.rs  main.rs  shader.rs
src/shaders/: fragment.glsl  vertex.glsl
static/: index.html
