[package]
name = "rust-font"
version = "0.1.0"
authors = ["Robaire Galliath <galliath.robaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
sdl2 = "0.34.3"
freetype-rs = "0.26.0"
nalgebra = "0.24.1"
